implemented the code challenge

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <div id="character-bar">
       <!-- show characters names here -->
+
     </div>
 
     <div class="characterInfo">
@@ -44,6 +45,6 @@
         </form> 
       -->
     </div>
-    <script src="src/index.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
